# medical_rag_project

./: .gitignore  01_build_vector_db.py  02_retrieval_and_rerank.py  03_rag_pipeline.py  03_rag_pipeline_api.py  04_rag_evaluation.py  05_build_lora_dataset.py  06_train_lora.py  07_rag_with_lora.py  README.md  medical_lora_dataset.json  pyproject.toml  rag_evaluation_results.csv
chatglm3_lora_medical/: README.md  adapter_config.json
configs/: README.md  dev_cpu.yaml  server_a5000.yaml  slurm_a800_offline.yaml
scripts/: README.md  build_index.py  placeholder.py  print_config.py  run_agent.py  run_eval.py  run_rag.py  test_retrieval.py
src/medagent/: __init__.py  pipeline.py
src/medagent/agent/: __init__.py  graph.py  query_analyzer.py  state.py
src/medagent/config/: __init__.py  settings.py
src/medagent/evaluation/: __init__.py  dataset.py  metrics.py  runner.py
src/medagent/generation/: __init__.py  answer_generator.py  citation_guard.py  llm_client.py  prompts.py
src/medagent/ingestion/: __init__.py  chunkers.py  index_builder.py  loaders.py
src/medagent/retrieval/: __init__.py  dense_retriever.py  evidence_evaluator.py  pipeline.py  reranker.py  types.py
src/medagent/serving/: __init__.py
src/medagent/utils/: __init__.py
tests/: README.md  test_agent_graph.py  test_chunkers.py  test_citation_guard.py  test_config.py  test_evidence_evaluator.py  test_llm_client.py  test_query_analyzer.py  test_smoke.py
